--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "tsx --watch src/index.ts",
     "start": "tsx src/index.ts"
   },
-  "author": "",
+  "author": {
+    "name": "cchampou",
+    "email": "clement@champouillon.com",
+    "website": "https://cchampou.me"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -23,8 +27,6 @@
   "dependencies": {
     "axios": "^1.4.0",
     "discord-interactions": "^3.4.0",
-    "discord.js": "^14.12.1",
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2"
   }
 }
