--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "dev": "tsx --watch src/index.ts",
-    "start": "tsx src/index.ts"
+    "start": "tsx src/index.ts",
+    "test": "jest"
   },
   "author": {
     "name": "cchampou",
@@ -14,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.5.0",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
@@ -21,7 +23,9 @@
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.2",
     "prettier": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "tsx": "^3.12.7"
   },
   "dependencies": {
