tests: add a bit more and tidy things up

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,9 @@
     "prettier"
   ],
   "extends": [
+    "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "plugin:prettier/recommended"
   ],
   "rules": {
     "prettier/prettier": "error"
