--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "duolingo",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "",
   "scripts": {
     "dev": "tsx --watch src/index.ts",
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "canvas": "^2.11.2",
     "discord-interactions": "^3.4.0",
     "express": "^4.18.2"
   }
