--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "duolingo",
-  "version": "1.1.11",
-  "description": "",
+  "version": "1.1.13",
+  "description": "A Discord bot that displays a leaderboard of our Duolingo Domination challenge",
+  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "tsx --watch src/index.ts",
-    "start": "tsx src/index.ts",
+    "start": "node dist/index.js",
+    "build": "rollup -c",
     "test": "jest",
     "lint": "eslint src/**/*.ts"
   },
@@ -15,12 +18,12 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.5.0",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
-    "dotenv": "^16.3.1",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.0",
@@ -28,13 +31,16 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.2",
     "prettier": "^3.0.1",
+    "rollup": "^3.28.0",
     "ts-jest": "^29.1.1",
+    "tslib": "^2.6.1",
     "tsx": "^3.12.7"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "canvas": "^2.11.2",
     "discord-interactions": "^3.4.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
